tests/ui/missing_clone.stderr
error[E0277]: the trait bound `Foo: Clone` is not satisfied
  --> $DIR/missing_clone.rs:3:10
   |
3  | #[derive(PureClone)]
   |          ^^^^^^^^^ the trait `Clone` is not implemented for `Foo`
   |
  ::: $WORKSPACE/src/clone.rs
   |
   | pub unsafe trait PureClone: Clone {}
   |                             ----- required by this bound in `PureClone`
   |
   = note: this error originates in the derive macro `PureClone` (in Nightly builds, run with -Z macro-backtrace for more info)
