tests/ui/missing_clone.rs
use clone_cell::clone::PureClone;

#[derive(PureClone)]
struct Foo {
    x: i32,
}

fn main() {}
